@@ -140,13 +140,14 @@ public class Schedule {
                    + ") later than or equal to termination date ("
                    + terminationDate + ")"); // TODO: message
 
-        if (tenor.length()==0)
+        if (tenor.length()==0) {
             rule_ = DateGeneration.Rule.Zero;
-        else
+        } else {
             QL.require(tenor.length() > 0,
                        "non positive tenor (" + tenor + ") not allowed"); // TODO: message
+        }
 
-        if ( firstDate != null && !firstDate.isNull() )
+        if ( firstDate != null && !firstDate.isNull() ) {
             switch (rule_) {
               case Backward:
               case Forward:
@@ -172,7 +173,8 @@ public class Schedule {
             	errMsg = "unknown Rule (" + rule_ + ")";
                 throw new LibraryException(errMsg); // TODO: message
             }
-        if ( nextToLastDate != null && !nextToLastDate.isNull() )
+        }
+        if ( nextToLastDate != null && !nextToLastDate.isNull() ) {
             switch (rule_) {
               case Backward:
               case Forward:
@@ -197,6 +199,7 @@ public class Schedule {
             	errMsg = "unknown Rule (" + rule_ + ")";
                 throw new LibraryException(errMsg); // TODO: message
             }
+        }
 
 
         // calendar needed for endOfMonth adjustment
@@ -220,30 +223,33 @@ public class Schedule {
             if ( nextToLastDate != null && !nextToLastDate.isNull() ) {
                 dates_.add(0, nextToLastDate);
                 final Date temp = nullCalendar.advance(seed, tenor_.mul(periods).negative(), convention, endOfMonth);
-                if (temp.ne(nextToLastDate))
+                if (temp.ne(nextToLastDate)) {
                     isRegular_.add(0, new Boolean(false));
-                else
+                } else {
                     isRegular_.add(0, new Boolean(true));
+                }
                 seed = nextToLastDate.clone();
             }
 
             exitDate = effectiveDate.clone();
-            if ( firstDate != null && !firstDate.isNull() )
+            if ( firstDate != null && !firstDate.isNull() ) {
                 exitDate = firstDate.clone();
+            }
 
             while (true) {
                 final Date temp = nullCalendar.advance(seed, tenor_.mul(periods).negative(), convention, endOfMonth);
-                if (temp .lt(exitDate))
+                if (temp .lt(exitDate)) {
                     break;
-                else {
+                } else {
                     dates_.add(0, temp);
                     isRegular_.add(0, new Boolean(true));
                     ++periods;
                 }
             }
 
-            if (endOfMonth && calendar.isEndOfMonth(seed))
+            if (endOfMonth && calendar.isEndOfMonth(seed)) {
                 convention = BusinessDayConvention.Preceding;
+            }
 
             if (calendar.adjust(dates_.get(0),convention).ne(
                 calendar.adjust(effectiveDate, convention))) {
@@ -268,10 +274,11 @@ public class Schedule {
             if (firstDate != null && !firstDate.isNull() ) {
                 dates_.add(firstDate);
                 final Date temp = nullCalendar.advance(seed, tenor_.mul(periods), convention, endOfMonth);
-                if (temp.ne(firstDate) )
+                if (temp.ne(firstDate) ) {
                     isRegular_.add(new Boolean(false));
-                else
+                } else {
                     isRegular_.add(new Boolean(true));
+                }
                 seed = firstDate.clone();
             } else if (rule_ == DateGeneration.Rule.Twentieth ||
                        rule_ == DateGeneration.Rule.TwentiethIMM) {
@@ -284,22 +291,24 @@ public class Schedule {
             }
 
             exitDate = terminationDate.clone();
-            if ( nextToLastDate != null && !nextToLastDate.isNull() )
+            if ( nextToLastDate != null && !nextToLastDate.isNull() ) {
                 exitDate = nextToLastDate.clone();
+            }
 
             while (true) {
                 final Date temp = nullCalendar.advance(seed, tenor_.mul(periods), convention, endOfMonth);
-                if ( temp.gt(exitDate) )
+                if ( temp.gt(exitDate) ) {
                     break;
-                else {
+                } else {
                     dates_.add(temp);
                     isRegular_.add(new Boolean(true));
                     ++periods;
                 }
             }
 
-            if (endOfMonth && calendar.isEndOfMonth(seed))
+            if (endOfMonth && calendar.isEndOfMonth(seed)) {
                 convention = BusinessDayConvention.Preceding;
+            }
 
             if (calendar.adjust(dates_.get(dates_.size()-1),terminationDateConvention).ne(
                 calendar.adjust(terminationDate, terminationDateConvention)))
@@ -309,7 +318,7 @@ public class Schedule {
                     isRegular_.add(new Boolean(true));
                 } else {
                     dates_.add(terminationDate);
-                    isRegular_.add(new Boolean(false));
+                    isRegular_.add(Boolean.valueOf(false));
                 }
 
             break;
@@ -320,14 +329,17 @@ public class Schedule {
         }
 
         // adjustments
-        if (rule_== DateGeneration.Rule.ThirdWednesday)
-            for (int i=1; i<dates_.size()-1; ++i)
+        if (rule_== DateGeneration.Rule.ThirdWednesday) {
+            for (int i=1; i<dates_.size()-1; ++i) {
                 dates_.set(i, Date.nthWeekday(3, Weekday.Wednesday,
                                              dates_.get(i).month(),
                                              dates_.get(i).year()));
+            }
+        }
 
-        for (int i=0; i<dates_.size()-1; ++i)
+        for (int i=0; i<dates_.size()-1; ++i) {
             dates_.set(i, calendar.adjust(dates_.get(i), convention));
+        }
 
         // termination date is NOT adjusted as per ISDA
         // specifications, unless otherwise specified in the
@@ -335,9 +347,10 @@ public class Schedule {
         // schedule
         if (terminationDateConvention != BusinessDayConvention.Unadjusted
             || rule_ == DateGeneration.Rule.Twentieth
-            || rule_ == DateGeneration.Rule.TwentiethIMM)
+            || rule_ == DateGeneration.Rule.TwentiethIMM) {
             dates_.set(dates_.size()-1, calendar.adjust(dates_.get(dates_.size()-1),
                                                     terminationDateConvention));
+        }
     }
 
     // Date access
@@ -573,8 +586,9 @@ public class Schedule {
 
     private Date nextTwentieth(final Date d, final DateGeneration.Rule rule) {
         final Date result = new Date(20, d.month(), d.year());
-        if (result.lt(d) )
+        if (result.lt(d) ) {
             result.addAssign(new Period(1, TimeUnit.Months)); //result +=1*Months
+        }
         if (rule == DateGeneration.Rule.TwentiethIMM) {
             final Month m = result.month();
             final int mVal = m.value();
@@ -615,8 +629,9 @@ public class Schedule {
                 }
             }
             if (index > 0) {
-                for (int i = index; i < dates_.size(); i++)
+                for (int i = index; i < dates_.size(); i++) {
                     ldates.add(dates_.get(i));
+                }
                 return ldates.iterator();
             }
         }
